--- a/views/admin/reports/salesreport.ejs
+++ b/views/admin/reports/salesreport.ejs
@@ -26,9 +26,9 @@
           <label for="endDate" class="visually-hidden">To</label>
           <input type="date" id="endDate" name="endDate" class="form-control" value="<%- endDate %>">
         </div>
-        <button type="submit" class="btn btn-primary">
+        <!-- <button type="submit" class="btn btn-primary">
           <i class="bi bi-search"></i> Get Report
-        </button>
+        </button> -->
       </form>
       <button onclick="getExcel()" type="button" class="btn btn-outline-success me-2">
         <i class="bi bi-file-earmark-spreadsheet"></i> Excel
