--- a/views/user/refferals.ejs
+++ b/views/user/refferals.ejs
@@ -1,4 +1,3 @@
-
 <section>
   <div class="container">
     <!-- Breadcrumbs -->
@@ -45,34 +44,33 @@
         </div>
       </div>
 
-      <div class="container table-responsive py-10 text-capitalize">
+      <div class="table-responsive">
         <table class="table table-striped table-hover">
-          <thead class="bg-dark-light">
-            <tr>
-              <th scope="col">Date</th>
-              <th scope="col">Username</th>
-              <th scope="col">Status</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% if (successfullRefferals && successfullRefferals.length !== 0 ) { %>
-            <% successfullRefferals.forEach((element) => { %>
-            <tr class="align-middle table-success">
-              <td><%= element.date.toDateString() %></td>
-              <td><%- element.username %></td>
-              <td><%- element.status %></td>
-            </tr>
-            <% }) %>
-
-            <% } else { %>
-            <tr>
-              <td colspan="4" class="text-center">No refferals yet</td>
-            </tr>
-            <% } %>
-
-          </tbody>
+            <thead class="bg-dark-light">
+                <tr>
+                    <th scope="col">Date</th>
+                    <th scope="col">Username</th>
+                    <th scope="col">Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% if (successfullRefferals && successfullRefferals.length !== 0) { %>
+                    <% successfullRefferals.forEach((element) => { %>
+                        <tr class="align-middle table-success">
+                            <td><%= element.date.toDateString() %></td>
+                            <td><%- element.username %></td>
+                            <td><%- element.status %></td>
+                        </tr>
+                    <% }) %>
+                <% } else { %>
+                    <tr>
+                        <td colspan="3">No successful referrals found.</td>
+                    </tr>
+                <% } %>
+            </tbody>
         </table>
-
+    </div>
+    
     </section>
   </div>
 </div>
